--- a/css/index.css
+++ b/css/index.css
@@ -104,7 +104,7 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
+    
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -143,4 +143,53 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+/* NAV */
+
+
+nav {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
+}
+header nav a {
+    text-decoration: none;
+    color: black;
+
+}
+
+.box1 {
+    background: teal;
+}
+
+.box2 {
+    background: gold;
+}
+.box3  {
+    background: cadetblue;
+}
+.box4  {
+    background: coral;
+}
+.box5  {
+    background: crimson;
+}
+.box6  {
+    background: forestgreen;
+}
+.box7  {
+    background: darkorchid;
+}
+.box8  {
+    background: hotpink;
+}
+.box9  {
+    background: indigo;
+}
+.box10  {
+    background: dodgerblue;
 }
