--- a/css/index.css
+++ b/css/index.css
@@ -76,6 +76,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
+    margin-top: 20px;
     border-bottom: 1px dashed black;
 }
 
@@ -149,11 +150,11 @@ footer nav a {
 
 
 nav {
-    width: 60%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 2%;
+    padding: 20px 0px 20px 0px;
     font-size: 14px;
 }
 header nav a {
